Pagination on WeeklySummaryConversor